# Weather-Forecast

./: CMakeLists.txt  README.md  config.json  main.cpp
lib/: CMakeLists.txt  city.cpp  city.h  meteo.cpp  meteo.h  ui.cpp  ui.h
